# farm-gym

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_action.yml  test_action.yml
Readme_figs/: game0-farm.avi
docs/: Makefile  api.rst  conf.py  games.rst  index.rst  info.md  installation.rst  requirements.txt  specifications.rst  user_guide.rst  yaml_to_table.py
docs/media/: farm.avi
docs/notebooks/: notebook_ppo.ipynb
docs/templates/: class.rst
docs/themes/scikit-learn-fork/: layout.html  nav.html
docs/tuto/: Tuto_AgentExpert.rst  tuto_ppo.rst
examples/: Introduction_to_farm_gym_with_rlberry_farms.ipynb  README.md  dqn_farm1.py  dqn_farm1_rlberry.py  dqn_sb3_farm0.py  interactive.ipynb  ppo_farm1_rlberry.py  ppo_sb3_farm0.py
examples/casestudy_files/: casestudy.py  utils.py
examples/casestudy_files/casestudy/: coupling_weeds_nopests_actions.yaml  coupling_weeds_pests_actions.yaml  coupling_weeds_pests_score.yaml  dry_clay_bean_pollinator_actions.yaml  (+2 more)
examples/deprecated/: dqn_sb3_farm0.py  dqn_sb3_farm1.py  ppo_sb3_farm0.py
farmgym/: __init__.py  _version.py
farmgym/v2/: __init__.py  entity_api.py  farm.py  farmer_api.py  field.py  gymUnion.py  make_farm.py  policy_api.py  rules_api.py  sandbox.py  score_api.py  scoring_api.py
tests/: deprecated_tests.py  test.py  test_farm.py  test_functional.py  test_policies.py  test_specification_manager.py  test_utils.py
tests/test_farm/: farm_actions.yaml  farm_init.yaml  farm_score.yaml
(+150 files in other folders)
