[metadata]
name = farmgym
version = 2.9
author = Odalric-Ambrym Maillard,
author_email = odalric.maillard@inria.fr
description = An open-AI-gym compatible generator of modular farm environments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.inria.fr/rl4ae/farm-gym
project_urls =
    Bug Tracker = https://gitlab.inria.fr/rl4ae/farm-gym/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD-3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
